--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,12 @@
+h1,
+h2,
+h3,
+h4,
+h5,
+p {
+  margin: 0;
+}
+
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -6,15 +15,326 @@
   /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: "Helvetica Neue", Arial, sans-serif;
 }
 
 .header {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  background-color: #f2f2f2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   /* выше установили ограничения для секции */
 }
+
+.logo {
+  width: 228px;
+  height: 32px;
+}
+
+.logo_place_header {
+  background-image: url(../images/logo_place_header.svg);
+  position: absolute;
+  top: 30px;
+  left: 64px;
+  z-index: 2;
+  background-position: center;
+  background-size: cover;
+}
+
+.header__title {
+  width: 730px;
+  margin: 0 0 0 64px;
+  font-size: 102px;
+  line-height: 96px;
+  font-weight: 600;
+  z-index: 2;
+}
+
+.header__subtitle {
+  position: absolute;
+  bottom: 30px;
+  left: 64px;
+  width: 388px;
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: normal;
+  text-decoration: none;
+  margin: 0;
+  z-index: 2;
+}
+
+.header__link {
+  text-decoration: none;
+  color: #2f80ed;
+}
+
+.header__main-illustration {
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+  width: 765px;
+  height: 608px;
+  z-index: 1;
+}
+
+.header__square-pic {
+  background-color: #2f80ed;
+  width: 568px;
+  height: 568px;
+  position: absolute;
+  top: 64px;
+  right: 0px;
+  z-index: 0;
+}
+
+.description {
+  display: flex;
+  justify-content: center;
+  margin: 0;
+}
+
+.two-columns {
+  margin: 100px 0px;
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.two-columns__brief {
+  width: 176px;
+  margin: 0 0 30px 0;
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: normal;
+  color: #2f80ed;
+}
+
+@media screen and (max-width: 1200px) {
+  .two-columns__brief {
+    width: 300px;
+  }
+}
+
+.two-columns__main-text {
+  min-width: 784px;
+  width: 80%;
+  margin: 0;
+  padding: 0;
+}
+
+.two-columns__paragraph {
+  margin-bottom: 30px;
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: normal;
+  list-style: none;
+}
+
+.two-columns__paragraph:last-of-type {
+  margin-bottom: 0px;
+}
+
+.two-columns__span-accent {
+  font-weight: bold;
+}
+
+.digits {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 100px;
+}
+
+.section-title {
+  display: block;
+  width: 60%;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 60px;
+  line-height: 1.15;
+  font-weight: 600;
+  margin-bottom: 20px;
+  z-index: 1;
+}
+
+.section-subtitle {
+  display: block;
+  width: 60%;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: normal;
+}
+
+.table {
+  display: block;
+  margin: 0 auto;
+  max-width: 1100px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.table__cell {
+  display: block;
+  width: 250px;
+  margin-top: 60px;
+}
+
+.table__heading {
+  font-size: 24px;
+  line-height: 1.15;
+  font-weight: 600;
+}
+
+.table__text {
+  margin-top: 20px;
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: normal;
+}
+
+.feynman {
+  background-color: #f2f2f2;
+  background-image: url(../images/feynman.png);
+  background-position: bottom left;
+  background-size: 867px 637px;
+  background-repeat: no-repeat;
+  padding-top: 100px;
+}
+
+.feynman__title {
+  margin:0 auto 70px;
+  text-align: center;
+  width: 648px;
+  font-size: 120px;
+  line-height: 1.15;
+  font-weight: 600;
+}
+
+.feynman__subtitle {
+  margin: 0 auto;
+  text-align: center;
+  width: 648px;
+  font-size: 36px;
+  line-height: 51px;
+  font-weight: normal;
+  padding-bottom: 400px;
+}
+
+.feynman__link {
+  position: absolute;
+  text-decoration: none;
+  color: #2f80ed;
+  right: 0;
+}
+
+.kaufman {
+  padding: 90px 0 90px;
+  background-color: #000000;
+  position: relative;
+}
+
+.kaufman_text-color_white {
+  color: #fff;
+  position: relative;
+}
+
+.table__cell_theme_dark {
+  width: 200px;
+  margin-top: 80px;
+  z-index: 1;
+}
+
+.kaufman__triangle {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 877px;
+  width: 877px;
+  z-index: 0;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.footer {
+  background-color: #000000;
+  padding:60px 0 40px;
+  color: #fff;
+}
+
+.footer__columns {
+  display: flex;
+  justify-content: space-around;
+  height: 200px;
+}
+
+.footer__columns_content_copyright {
+  flex-basis: 771px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.logo_place_footer {
+  background-image: url(../images/logo_place_footer.svg);
+}
+
+.footer__author{
+  margin: 18px 0;
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: normal;
+}
+
+.footer__columns_info{
+
+}
+
+.footer__column-heading{
+  margin-bottom: 20px;
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: 600;
+}
+
+.footer__column-links{
+  display: block;
+  text-decoration: none;
+  color: #fff;
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: normal;
+}
+
+.footer__social-icon {
+  display: flex;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
