--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,3 @@
-h1,
-h2,
-h3,
-h4,
-h5,
-p,
-ul,
-li {
-  margin: 0;
-}
-
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -29,6 +18,7 @@ li {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  overflow: hidden;
   /* выше установили ограничения для секции */
 }
 
@@ -116,12 +106,6 @@ li {
   color: #2f80ed;
 }
 
-@media screen and (max-width: 1200px) {
-  .two-columns__brief {
-    width: 300px;
-  }
-}
-
 .two-columns__main-text {
   min-width: 784px;
   width: 80%;
@@ -130,11 +114,10 @@ li {
 }
 
 .two-columns__paragraph {
-  margin-bottom: 30px;
+  margin: 0 0 30px 0;
   font-size: 24px;
   line-height: 34px;
   font-weight: normal;
-  list-style: none;
 }
 
 .two-columns__paragraph:last-of-type {
@@ -160,7 +143,6 @@ li {
   line-height: 1.15;
   font-weight: 600;
   margin-bottom: 20px;
-  z-index: 1;
 }
 
 .section-subtitle {
@@ -179,28 +161,32 @@ li {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  padding: 0;
 }
 
 .table__cell {
   display: block;
   width: 250px;
-  margin-top: 60px;
+  margin: 60px 0 0 0;
 }
 
 .table__heading {
   font-size: 24px;
   line-height: 1.15;
   font-weight: 600;
+  margin: 0;
 }
 
 .table__text {
-  margin-top: 20px;
+  margin: 20px 0 0 0;
   font-size: 18px;
   line-height: 1.2;
   font-weight: normal;
 }
 
 .feynman {
+  position: relative;
+  min-width: 890px;
   background-color: #f2f2f2;
   background-image: url(../images/feynman.png);
   background-position: bottom left;
@@ -233,17 +219,18 @@ li {
   text-decoration: none;
   color: #2f80ed;
   right: 0;
+  top: 450px;
+  font-size: 36px;
+  line-height: 51px;
+  font-weight: normal;
 }
 
 .kaufman {
-  padding: 90px 0 90px;
-  background-color: #000000;
-  position: relative;
-}
-
-.kaufman_text-color_white {
   color: #fff;
+  padding: 90px 0 90px;
+  background-color: #1f1f1f;
   position: relative;
+  overflow: hidden;
 }
 
 .table__cell_theme_dark {
@@ -252,27 +239,39 @@ li {
   z-index: 1;
 }
 
+.section-title_theme_dark {
+  position: relative;
+  z-index: 1;
+}
+
+.section-subtitle_theme_dark {
+  position: relative;
+  z-index: 1;
+}
+
 .kaufman__triangle {
+  background-image: url(../images/kaufman-triangle.svg);
+  background-size: cover;
   position: absolute;
   top: 0;
-  right: 0;
+  right: -200px;
   height: 877px;
   width: 877px;
-  z-index: 0;
-  max-width: 100%;
-  max-height: 100%;
+  z-index: 1;
 }
 
 .footer {
-  background-color: #000000;
+  background-color: #1f1f1f;
   padding: 60px 0 40px;
   color: #fff;
 }
 
 .footer__columns {
+  margin: 0 auto;
+  width: 90%;
   display: flex;
-  justify-content: space-around;
-  height: 200px;
+  justify-content: space-between;
+  height: 250px;
 }
 
 .footer__columns_content_copyright {
@@ -302,6 +301,10 @@ li {
 
 .footer__column-links {
   display: block;
+}
+
+.footer__column-link {
+  display: block;
   text-decoration: none;
   color: #fff;
   font-size: 18px;
@@ -310,5 +313,7 @@ li {
 }
 
 .footer__social-icon {
-  display: flex;
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
 }
